@@ -3,6 +3,10 @@ OpenStopMotion Changelog
 
 0.6.2 2013-04-12
   - Fixed missing directory in source distribution 
+  - after clicking undo button, capture button gets focus
+  - when opening load or save dialog in led control, capture from
+    webcam is suspended
+  - last ledcontrol savefile is automatically loaded on next start
   
 0.6.1 2013-04-12
   - added clear-button in LED control
